# dao-scripts

./: CHANGELOG.md  README.md  setup.cfg
.github/workflows/: ci.yml  update-datasets.yml
src/: argparser.py  config.py  endpoints.json  main.py  metadata.py
src/aragon/: runner.py
src/common/: api_requester.py  blockscout.py  common.py  cryptocompare.py  graphql.py  thegraph.py
src/daohaus/: runner.py
src/daostack/: runner.py
test/daohaus/: test_verify_daohaus_collectors.py
