[metadata]
name = dao-scripts
# version from setuptools_scm (see setup.py)
author = David Davó
author_email = ddavo@ucm.es
description = "A tool to download data to monitor DAO activity"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Grasia/dao-scripts
project_urls =
  Source = https://github.com/Grasia/dao-scripts
  Bug Tracker = https://github.com/Grasia/dao-scripts/issues
  Changelog = https://github.com/Grasia/dao-scripts/blob/main/CHANGELOG.md
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Sociology
  Typing :: Typed
  Topic :: Utilities

[options]
# packages and package_dir in setup.py
python_requires = >= 3.9
install_requires =
  gql >= 3.0.0a1
  numpy >= 1.17.3
  pandas >= 1.3.4
  portalocker >= 2.3.2
  pyarrow >= 6.0.0
  requests >= 2.26.0
  requests-cache >= 0.8.1
  requests-toolbelt >= 0.9.1
  tenacity >= 8.0.0
  tqdm >= 4.62.3

[options.package_data]
dao_analyzer.cache_scripts = 
  *.json
  */*.json

[options.entry_points]
console_scripts =
  dao-scripts = dao_analyzer.cache_scripts.main:main
  dao-utils-upload-dw = dao_analyzer.cache_scripts.utils.uploadDataWarehouse:main
  daoa-cache-scripts = dao_analyzer.cache_scripts.main:main

[options.extras_require]
upload =
  kaggle >= 1.5.12
  zenodo-client >= 0.3.0
dev =
  build
  pytest
  hypothesis
  flake8
  pandas-vet
  twine
  hypothesis
  pandas-vet

[flake8]
ignore = 
    # Everything related to indentation
    E1, 
    # Everything related to whitespace
    E2,
    # Blank lines
    E3,
    # Line too long
    E501,
    # Indentation warning
    W1,
    # Whitespace warning
    W2,
    # Blank line warning
    W3,
    # Line break warning
    W5,
    # Disabled until they fix false positives
    PD005,
    # Disabled until they fix false positives
    PD011,
    # 'df' is a bad variable name. Dont care.
    PD901, 
exclude = 
    venv,
    __pycache__,
    .*,
    dist
max-complexity  = 10
max-line-length = 100

[tox:tox]
envlist = py{39,310,311,312}

[testenv]
deps = .[dev]
wheel_build_env = build
commands = 
  pytest

[testenv:build]

[testenv:lint]
deps = flake8
commands =
  flake8 .

[gh-actions]
python =
  3.8: py38
  3.9: py39
  3.10: py310
  3.11: py311
